--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -1,13 +1,22 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
+  <!-- Device related -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="{% static 'css/users/style.min.css' %}">
+
   <title>Document</title>
 </head>
+
 <body>
   {% block content %}
   {% endblock content %}
 </body>
+
 </html>
