--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -13,6 +13,6 @@
   <label>パスワード(確認)</label>
   {{ form.password2 }}
   {{ form.password2.errors }}<br>
-  <input type="submit" value="登録する">
+  <input type="submit" value="新規登録">
 </form>
 {% endblock content %}
