comp account sys

--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -5,4 +5,8 @@
 <div class="hoge">
   hoge
 </div>
+
+<form method="post" action="{% url 'users:withdraw' %}">{% csrf_token %}
+  <button type="submit">退会</button>
+</form>
 {% endblock content %}
