--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -13,4 +13,8 @@
   <input type="password" name="password"><br>
   <input type="submit" value="ログイン">
 </form>
+
+<form method="post" action="{% url 'users:password_reset' %}">{% csrf_token %}
+  <button type="submit">パスワードを忘れましたか？</button>
+</form>
 {% endblock %}
