--- a/users/templates/users/pls_activate.html
+++ b/users/templates/users/pls_activate.html
@@ -2,7 +2,8 @@
 {% load static %}
 
 {% block content %}
-<div class="hoge">
-  sent email
+<div class="pt-4 pb-3">
+  <p>あなたのメールアドレス宛てに本登録用のメールを送りました。</p>
+  <p>メールのURLをクリックして、本登録を完了させてください。</p>
 </div>
 {% endblock content %}
