--- a/users/templates/users/signup_done.html
+++ b/users/templates/users/signup_done.html
@@ -2,7 +2,8 @@
 {% load static %}
 
 {% block content %}
-<div class="hoge">
-  active done
+<div class="pt-4 pb-3">
+  <p>本登録が完了しました。</p>
+  <a href="{% url 'users:login' %}">ログインページへ</a>
 </div>
 {% endblock content %}
