--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -4,19 +4,36 @@
 <html lang="ja">
 
 <head>
-  <!-- Device related -->
+  <!-- meta tag -->
+  <title>Atom</title>
+  <meta name="description" content="シェアハウスで家事を自動で割り振ってみよう">
+  <meta name="keywords" content="家事 シェアハウス Atom house chore">
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="{% static 'css/users/style.min.css' %}">
+  <link rel="apple-touch-icon apple-touch-icon-precomposed" sizes="180x180" href="{% static 'img/users/apple-touch-icon.png' %}" />
 
-  <title>Document</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="{% static 'css/users/style.min.css' %}">
+  <link rel="icon" href="{% static 'img/users/favicon.ico' %}">
 </head>
 
 <body>
-  {% block content %}
-  {% endblock content %}
+  <section class="row mx-auto mt-lg-5 mt-3">
+    <div class="col-lg-3 col-11 mx-auto container">
+      {% block content %}
+      {% endblock %}
+    </div>
+  </section>
+
+  <!-- bootstrap -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 
 </html>
