--- a/users/templates/users/withdraw.html
+++ b/users/templates/users/withdraw.html
@@ -2,7 +2,8 @@
 {% load static %}
 
 {% block content %}
-<div class="hoge">
-  退会しました。
+<div class="pt-4 pb-3">
+  <p>退会処理が完了しました。</p>
+  <p>ご利用ありがとうございました。</p>
 </div>
 {% endblock content %}
