--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -19,6 +19,11 @@
     <input type="submit" value="新規登録" class="btn">
   </div>
 </form>
+<div class="px-2 my-4">
+  <a class="btn btn-block btn-social btn-google" href="{% url 'social:begin' 'google-oauth2' %}">
+    <span class="fa fa-google"></span>Googleで新規登録
+  </a>
+</div>
 <div class="pl-2 pb-4">
   <a href="{% url 'users:login' %}">ログイン</a>
 </div>
