--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -27,4 +27,7 @@
 <div class="pl-2 pb-4">
   <a href="{% url 'users:login' %}">ログイン</a>
 </div>
+<div class="pl-2 pb-4">
+  <a href="{% url 'users:policy' %}" target="_blank" rel="noopener noreferrer">プライバシーポリシー</a>
+</div>
 {% endblock content %}
