--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,7 +5,7 @@
 <div class="header">
   <h5>ログイン</h5>
 </div>
-<div class="px-2 my-4">
+<div class="px-2 mt-4">
   <form method="post">{% csrf_token %}
     {% if form.errors %}
     <p>メールアドレスかパスワードが間違っています。</p>
@@ -22,13 +22,16 @@
   <div class="pt-3">
     <a href="{% url 'users:password_reset' %}" target="_blank" rel="noopener noreferrer">パスワードを忘れましたか？</a>
   </div>
-  <div class="pt-3">
-    <a href="{% url 'users:signup' %}">新規登録はこちらから</a>
-  </div>
   <div class="my-4">
     <a class="btn btn-block btn-social btn-google" href="{% url 'social:begin' 'google-oauth2' %}">
       <span class="fa fa-google"></span>Googleでログイン
     </a>
+  </div>
+  <div class="pt-3">
+    <a href="{% url 'users:signup' %}">新規登録はこちらから</a>
+  </div>
+  <div class="pb-3">
+    <a href="{% url 'users:policy' %}" target="_blank" rel="noopener noreferrer">プライバシーポリシー</a>
   </div>
 </div>
 {% endblock %}
