--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -24,10 +24,11 @@
     <span class="fa fa-google"></span>Googleで新規登録
   </a>
 </div>
-<div class="pl-2 pb-4">
+<div class="pl-2 py-3">
   <a href="{% url 'users:login' %}">ログイン</a>
 </div>
-<div class="pl-2 pb-4">
+<div class="pl-2 pb-3">
   <a href="{% url 'users:policy' %}" target="_blank" rel="noopener noreferrer">プライバシーポリシー</a>
+  <a href="{% url 'users:terms' %}" target="_blank" rel="noopener noreferrer">利用規約</a>
 </div>
 {% endblock content %}
