--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -13,7 +13,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- GCP Recaptcha -->
+  <!-- Search Console -->
+  <meta name="google-site-verification" content="bOnMJxbJdHCSlFYR_y9wU20oasB-1MpZtaN4PoyV1xI" />
+
+  <!-- Recaptcha -->
   <!-- <script src="https://www.google.com/recaptcha/api.js"></script> -->
   <script src="https://www.google.com/recaptcha/api.js?render=6LdbF4EaAAAAAH4V9k15J9fWPE2q2RsYXbUHTSd-"></script>
 
