--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -14,10 +14,11 @@
     <input name="username" class="w-100 py-1"><!-- email ではない --><br>
     <label class="pt-3">パスワード:</label><br>
     <input type="password" name="password" class="w-100 py-1"><br>
-    <div class="my-4 g-recaptcha" data-sitekey="6LdbF4EaAAAAAH4V9k15J9fWPE2q2RsYXbUHTSd-"></div>
+    <div class="my-4 g-recaptcha" data-callback="clearcall" data-sitekey="6LdbF4EaAAAAAH4V9k15J9fWPE2q2RsYXbUHTSd-"></div>
     <div class="text-center mt-4 mb-3">
-      <input type="submit" value="ログイン" class="btn">
+      <input type="submit" value="ログイン" class="btn" id="loginBtn" disabled>
     </div>
+    <input type="hidden" id="reCaptcha">
   </form>
   <div class="pt-3">
     <a href="{% url 'users:password_reset' %}" target="_blank" rel="noopener noreferrer">パスワードを忘れましたか？</a>
