--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-  <section class="row mx-auto mt-lg-5 mt-3">
+  <section class="row mx-auto mt-lg-5 pt-5 mt-3">
     <div class="col-lg-3 col-11 mx-auto container">
       {% block content %}
       {% endblock %}
