--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -17,8 +17,7 @@
   <meta name="google-site-verification" content="bOnMJxbJdHCSlFYR_y9wU20oasB-1MpZtaN4PoyV1xI" />
 
   <!-- Recaptcha -->
-  <!-- <script src="https://www.google.com/recaptcha/api.js"></script> -->
-  <script src="https://www.google.com/recaptcha/api.js?render=6LdbF4EaAAAAAH4V9k15J9fWPE2q2RsYXbUHTSd-"></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
   <link rel="apple-touch-icon apple-touch-icon-precomposed" sizes="180x180" href="{% static 'img/users/apple-touch-icon.png' %}" />
 
@@ -34,7 +33,7 @@
 </head>
 
 <body>
-  <section class="row mx-auto mt-lg-5 pt-5 mt-3">
+  <section class="row mx-auto mt-lg-5 pt-5 mt-2">
     <div class="col-lg-3 col-11 mx-auto container">
       {% block content %}
       {% endblock %}
@@ -45,8 +44,6 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  <!-- device -->
-  <script src="{% static 'js/users/base.min.js' %}"></script>
 </body>
 
 </html>
