--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -15,8 +15,11 @@
   <label class="pt-3">パスワード(確認):</label><br>
   {{ form.password2 }}
   {{ form.password2.errors }}<br>
+  <div class="mt-4">
+  {{ form.captcha }}
+  </div>
   <div class="mt-4 mb-3">
-    <input type="submit" value="新規登録" class="btn">
+    <input type="submit" value="新規登録" class="btn px-3">
   </div>
 </form>
 <div class="px-2 my-4">
