--- a/static/css/app/style.css
+++ b/static/css/app/style.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+.message-success {
+  background-color: red;
+}
+/*# sourceMappingURL=style.css.map */
