--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -3,11 +3,12 @@
 
 {% block content %}
 <form action="{% url 'users:select_house' %}" method="POST">{% csrf_token %}
-  <select name="" id="">
+  <select>
     <option value="大山池袋">大山池袋</option>
     <option value="ハウスB">ハウスB</option>
     <option value="ハウスC">ハウスC</option>
   </select>
+  <input type="submit">
 </form>
 <div class="pt-3">
   <a href="{% url 'users:withdraw' %}">退会</a>
