--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -26,6 +26,10 @@
 </head>
 
 <body>
+  {% for message in messages %}
+  <p class="message-success text-center py-2">{{ message }}</p>
+  {% endfor %}
+
   <section class="row mx-auto mt-lg-5 pt-5 mt-2">
     <div class="col-lg-3 col-11 mx-auto container">
       {% block content %}
@@ -37,6 +41,8 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <!-- device related -->
+  <script src="{% static 'js/app/base.min.js' %}"></script>
 </body>
 
 </html>
