--- a/app/templates/app/room.html
+++ b/app/templates/app/room.html
@@ -2,18 +2,16 @@
 {% load static %}
 
 {% block content %}
-{% for message in messages %}
-  <p class="message-success">{{ message }}</p>
-{% endfor %}
 
 {% if user.is_superuser %}
-<form action="{% url 'app:assign_chore' %}" method="POST">{% csrf_token %}
+<form action="{% url 'app:assign_chore' %}" method="POST" id="assignChore">{% csrf_token %}
   <input type="submit" value="今週の仕事を割り振る">
 </form>
 {% endif %}
 <div class="hoge">
   <p>今週の{{ user.name }}の家事</p>
-  <p></p>
+  <p>{{ user.housechore }}</p>
+  <p>公共費 500円/月</p>
 </div>
 <div class="pt-3">
   <a href="{% url 'users:index' %}">ログイン後の画面に戻る</a>
