--- a/static/css/app/style.scss
+++ b/static/css/app/style.scss
@@ -100,12 +100,17 @@ html {
         .btn {
           @include button;
         }
+        p {
+          b {
+            color: $dark-blue;
+          }
+        }
       }
     }
   }
 }
 
 .message-success {
-  background-color: $green;
+  background-color: $blue;
   color: $white;
 }
