--- a/static/css/users/style.scss
+++ b/static/css/users/style.scss
@@ -2,6 +2,7 @@
 $grey: #c3c2c2;
 $light-grey: #f8f8f8;
 $white: #ffffff;
+$black: #383838;
 $dark-blue: #023465;
 $blue: #609bb6;
 $light-blue: #8ebbcf;
