--- a/static/css/app/style.css
+++ b/static/css/app/style.css
@@ -91,8 +91,12 @@ html body section .container .btn:hover {
   background-color: #609bb6;
 }
 
+html body section .container p b {
+  color: #023465;
+}
+
 .message-success {
-  background-color: #71bf2b;
+  background-color: #609bb6;
   color: #ffffff;
 }
 /*# sourceMappingURL=style.css.map */
