--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -2,17 +2,25 @@
 {% load static %}
 
 {% block content %}
-<form name="select_house" action="{% url 'users:select_house' %}" method="POST">{% csrf_token %}
-  <select>
-    {% for house_name in house %}
-    <option name="house_name">
-      {{ house_name.name }}
-    </option>
-    {% endfor %}
-  </select>
-  <input type="submit" value="このハウスメンバーとして登録">
-</form>
-<div class="pt-3">
-  <a href="{% url 'users:withdraw' %}">退会</a>
+<div class="text-center my-5">
+  <p>住んでいるハウスを選択してください</p>
+</div>
+<div class="px-2 mt-4">
+  <form name="select_house" class="mb-4" action="{% url 'users:select_house' %}" method="POST">{% csrf_token %}
+    <select class="w-100 mb-4">
+      {% for house_name in house %}
+      <option name="house_name">
+        {{ house_name.name }}
+      </option>
+      {% endfor %}
+    </select>
+    <input type="submit" class="btn w-100" value="このハウスメンバーとして登録">
+  </form>
+  <div class="pt-3">
+    <a href="{% url 'users:logout' %}">ログアウト</a>
+  </div>
+  <div class="py-3">
+    <a href="{% url 'users:withdraw' %}">退会</a>
+  </div>
 </div>
 {% endblock %}
