--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -31,7 +31,7 @@
   <a href="{% url 'users:login' %}">ログイン</a>
 </div>
 <div class="pl-2 pb-3">
-  <a href="{% url 'users:policy' %}" target="_blank" rel="noopener noreferrer">プライバシーポリシー</a>
+  <a class="pr-1" href="{% url 'users:policy' %}" target="_blank" rel="noopener noreferrer">プライバシーポリシー</a>
   <a href="{% url 'users:terms' %}" target="_blank" rel="noopener noreferrer">利用規約</a>
 </div>
 {% endblock content %}
