--- a/users/templates/users/withdraw.html
+++ b/users/templates/users/withdraw.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="pt-4 pb-3">
-  <p>退会処理が完了しました。</p>
+  <p>アカウントが削除され、退会処理が完了しました。</p>
   <p>ご利用ありがとうございました。</p>
 </div>
 {% endblock content %}
