--- a/app/templates/app/room.html
+++ b/app/templates/app/room.html
@@ -26,6 +26,9 @@
   <a href="{% url 'users:index' %}">ハウス選択に戻る</a>
 </div>
 <div class="py-3">
-  <a href="{% url 'users:logout' %}">ログアウト</a>
+  <a class="pr-1" href="{% url 'users:logout' %}">ログアウト</a>
+  {% if user.is_superuser %}
+  <a href="/admin/" target="_blank" rel="noopener noreferrer">ハウス管理者</a>
+  {% endif %}
 </div>
 {% endblock %}
