--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -17,7 +17,10 @@
     <input type="submit" class="btn w-100" value="このハウスメンバーとして登録">
   </form>
   <div class="pt-3">
-    <a href="{% url 'users:logout' %}">ログアウト</a>
+    <a class="pr-1" href="{% url 'users:logout' %}">ログアウト</a>
+    {% if user.is_superuser %}
+    <a href="/admin/" target="_blank" rel="noopener noreferrer">ハウス管理者</a>
+    {% endif %}
   </div>
   <div class="py-3">
     <a href="{% url 'users:withdraw' %}">退会</a>
