--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -31,7 +31,10 @@
   </div>
   <div class="py-3">
     <a class="pr-2" href="{% url 'users:policy' %}" target="_blank" rel="noopener noreferrer">プライバシーポリシー</a>
-    <a href="{% url 'users:terms' %}" target="_blank" rel="noopener noreferrer">利用規約</a>
+    <a class="pr-2" href="{% url 'users:terms' %}" target="_blank" rel="noopener noreferrer">利用規約</a>
+    {% if user.is_superuser %}
+    <a href="/admin/" target="_blank" rel="noopener noreferrer">ハウス管理者</a>
+    {% endif %}
   </div>
 </div>
 {% endblock %}
