--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -32,6 +32,9 @@
 </div>
 <div class="pl-2 pb-3">
   <a class="pr-1" href="{% url 'users:policy' %}" target="_blank" rel="noopener noreferrer">プライバシーポリシー</a>
-  <a href="{% url 'users:terms' %}" target="_blank" rel="noopener noreferrer">利用規約</a>
+  <a class="pr-1" href="{% url 'users:terms' %}" target="_blank" rel="noopener noreferrer">利用規約</a>
+  {% if user.is_superuser %}
+  <a href="/admin/" target="_blank" rel="noopener noreferrer">ハウス管理者</a>
+  {% endif %}
 </div>
 {% endblock content %}
