--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -13,14 +13,14 @@
 
   <div class="pt-3 row">
     <div class="col-4">
-      <p class="pr-1 logout" id="logout">ログアウト</p>
+      <p class="logout" id="logout">ログアウト</p>
     </div>
     {% if user.is_superuser %}
     <a href="/admin/" target="_blank" rel="noopener noreferrer">ハウス管理者</a>
     {% endif %}
   </div>
-  <div class="pt-2 pb-3">
-    <a href="{% url 'users:withdraw' %}">退会</a>
+  <div class="py-2 row">
+    <p class="withdraw col-4" id="withdraw">退会</p>
   </div>
 </div>
 {% endblock %}
