--- a/users/templates/users/pls_activate.html
+++ b/users/templates/users/pls_activate.html
@@ -1,9 +1,14 @@
 {% extends 'users/base.html' %}
+{% load i18n %}
 {% load static %}
 
 {% block content %}
 <div class="pt-4 pb-3">
-  <p>あなたのメールアドレス宛てに本登録用のメールを送りました。</p>
-  <p>メールのURLをクリックして、本登録を完了させてください。</p>
+  <p>
+    {% trans "あなたのメールアドレス宛てに本登録用のメールを送りました。" %}
+  </p>
+  <p>
+    {% trans "メールのURLをクリックして、本登録を完了させてください。" %}
+  </p>
 </div>
 {% endblock content %}
