--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -1,18 +1,25 @@
 {% extends 'users/base.html' %}
+{% load i18n %}
 {% load static %}
 
 {% block content %}
 <div class="header">
-  <h5>新規登録</h5>
+  <h5>
+    {% trans "新規登録" %}
+  </h5>
 </div>
 <form class="px-2 my-4" method="post" action="{% url 'users:signup' %}">{% csrf_token %}
   <label>Email:</label><br>
   {{ form.email }}
   {{ form.email.errors }}<br>
-  <label class="pt-3">パスワード:</label><br>
+  <label class="pt-3">
+    {% trans "パスワード:" %}
+  </label><br>
   {{ form.password1 }}
   {{ form.password1.errors }}<br>
-  <label class="pt-3">パスワード(確認):</label><br>
+  <label class="pt-3">
+    {% trans "パスワード(確認):" %}
+  </label><br>
   {{ form.password2 }}
   {{ form.password2.errors }}<br>
   <div class="mt-4">
@@ -24,17 +31,26 @@
 </form>
 <div class="px-2 my-4">
   <a class="btn btn-block btn-social btn-google" href="{% url 'social:begin' 'google-oauth2' %}">
-    <span class="fa fa-google"></span>Googleで新規登録
+    <span class="fa fa-google"></span>
+    {% trans "Googleで新規登録" %}
   </a>
 </div>
 <div class="pl-2 py-3">
-  <a href="{% url 'users:login' %}">ログイン</a>
+  <a href="{% url 'users:login' %}">
+    {% trans "ログイン" %}
+  </a>
 </div>
 <div class="pl-2 pb-3">
-  <a class="pr-1" href="{% url 'users:policy' %}" target="_blank" rel="noopener noreferrer">プライバシーポリシー</a>
-  <a class="pr-1" href="{% url 'users:terms' %}" target="_blank" rel="noopener noreferrer">利用規約</a>
+  <a class="pr-1" href="{% url 'users:policy' %}" target="_blank" rel="noopener noreferrer">
+    {% trans "プライバシーポリシー" %}
+  </a>
+  <a class="pr-1" href="{% url 'users:terms' %}" target="_blank" rel="noopener noreferrer">
+    {% trans "利用規約" %}
+  </a>
   {% if user.is_superuser %}
-  <a href="/admin/" target="_blank" rel="noopener noreferrer">ハウス管理者</a>
+  <a href="/admin/" target="_blank" rel="noopener noreferrer">
+    {% trans "ハウス管理者" %}
+  </a>
   {% endif %}
 </div>
 {% endblock content %}
