fix miss of translation

--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -36,14 +36,17 @@
       {% block content %}
       {% endblock %}
 
-      <form class="ml-2 mb-3" action="{% url 'set_language' %}" method="post">{% csrf_token %}
+      <form class="ml-2 mb-3" action="{% url 'set_language' %}" method="POST">{% csrf_token %}
         <input name="next" type="hidden" value="{{ redirect_to }}">
         <select name="language" id="changeLangUsers">
             {% get_current_language as LANGUAGE_CODE %}
             {% get_available_languages as LANGUAGES %}
             {% get_language_info_list for LANGUAGES as languages %}
             {% for language in languages %}
-                <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                <option value="{{ language.code }}"
+                {% if language.code == LANGUAGE_CODE %}
+                  selected
+                {% endif %}>
                     {{ language.name_local }}
                 </option>
             {% endfor %}
