--- a/app/templates/app/room.html
+++ b/app/templates/app/room.html
@@ -18,7 +18,9 @@
 <div class="row mt-3">
   <div class="col-11 mx-auto">
     <p><b>
-      {% trans "今週{{ user.name }}さんが担当する家事" %}
+      {% trans "今週" %}
+      {{ user.name }}
+      {% trans "さんが担当する家事" %}
     </b></p><br>
     <h5 class="pl-1">{{ user.housechore_title }}</h5>
     <p class="pl-3 pt-1">{{ user.housechore_desc }}</p>
