want to fix house name

--- a/app/templates/app/room.html
+++ b/app/templates/app/room.html
@@ -32,8 +32,8 @@
 </div>
 <hr>
 <div class="pt-1">
-  <a href="{% url 'users:index' %}">
-    {% trans "ハウス選択に戻る" %}
+  <a href="{% url 'users:request_ch_house' %}">
+    {% trans "ハウスを間違えましたか？" %}
   </a>
 </div>
 <div class="py-3">
