--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -31,6 +31,10 @@
 </head>
 
 <body>
+  {% for message in messages %}
+  <p class="message-success text-center py-2">{{ message }}</p>
+  {% endfor %}
+
   <section class="row mx-auto mt-lg-5 pt-5 mt-2">
     <div class="col-lg-3 col-11 mx-auto container">
       {% block content %}
