--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -31,9 +31,13 @@
         {% trans "ログアウト" %}
       </p>
     </div>
-    {% if user.is_superuser %}
+    {% if user.is_staff %}
     <a href="/admin/" target="_blank" rel="noopener noreferrer">
-      {% trans "ハウス管理者" %}
+      {% trans "ハウス管理" %}
+    </a>
+    {% else %}
+    <a href="{% url 'users:request_house_owner' %}">
+      {% trans "ハウス管理者権限の申請" %}
     </a>
     {% endif %}
   </div>
