--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -14,7 +14,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="apple-touch-icon apple-touch-icon-precomposed" sizes="180x180" href="{% static 'img/users/apple-touch-icon.png' %}" />
+  <link rel="apple-touch-icon" href="{% static 'img/users/icon.png' %}">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -23,7 +23,7 @@
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
 
   <link rel="stylesheet" href="{% static 'css/app/style.min.css' %}">
-  <link rel="icon" href="{% static 'img/users/favicon.ico' %}">
+  <link rel="icon" type="image/png" href="{% static 'img/users/favicon.ico' %}">
 </head>
 
 <body>
