--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -17,7 +17,7 @@
   <!-- Recaptcha -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
-  <link rel="apple-touch-icon apple-touch-icon-precomposed" sizes="180x180" href="{% static 'img/users/apple-touch-icon.png' %}" />
+  <link rel="apple-touch-icon" href="{% static 'img/users/icon.png' %}">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -27,7 +27,7 @@
 
   <link rel="stylesheet" href="{% static 'css/users/style.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/users/bootstrap-social.min.css' %}">
-  <link rel="icon" href="{% static 'img/users/favicon.ico' %}">
+  <link rel="icon" type="image/png" href="{% static 'img/users/favicon.ico' %}">
 </head>
 
 <body>
