--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -22,7 +22,9 @@
     </label><br>
     <input type="password" name="password" class="w-100 py-1"><br>
     <div class="text-center mt-4 mb-3">
-      <input type="submit" value="ログイン" class="btn px-3">
+      <button type="submit" class="btn px-3">
+        {% trans "ログイン" %}
+      </button>
     </div>
   </form>
   <div class="pt-3">
