--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -26,7 +26,9 @@
   {{ form.captcha }}
   </div>
   <div class="mt-4 mb-3">
-    <input type="submit" value="新規登録" class="btn px-3">
+    <button type="submit" class="btn px-3">
+      {% trans "新規登録" %}
+    </button>
   </div>
 </form>
 <div class="px-2 my-4">
