--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="text-center my-5">
-  {% if request.user.house == '' %}
+  {% if request.user.house == None %}
   <p>
       {% trans "住んでいるハウスを選択してください" %}
   </p>
