fix bug for activation

--- a/users/templates/users/policy.html
+++ b/users/templates/users/policy.html
@@ -5,7 +5,7 @@
 <!-- https://kiyaku.jp/hinagata/gp.html -->
 <h5 class="pt-5 pl-4">プライバシーポリシー</h5>
 <br><br>
-xx（以下，「当社」といいます。）は，本ウェブサイト上で提供するサービス（以下,「本サービス」といいます。）における，ユーザーの個人情報の取扱いについて，以下のとおりプライバシーポリシー（以下，「本ポリシー」といいます。）を定めます。
+Atom（以下，「当社」といいます。）は，本ウェブサイト上で提供するサービス（以下,「本サービス」といいます。）における，ユーザーの個人情報の取扱いについて，以下のとおりプライバシーポリシー（以下，「本ポリシー」といいます。）を定めます。
 <br><br>
 第1条（個人情報）
 <br>
