add one time pass

--- a/users/templates/users/axes_locked.html
+++ b/users/templates/users/axes_locked.html
@@ -5,9 +5,9 @@
 {% block content %}
 <div class="pt-4 pb-3">
   <p>
-    ログインに7回以上失敗したため、
+    {% trans "ログインに7回以上失敗したため、" %}
     <br>
-    アカウントが1時間ロックされました。
+    {% trans "アカウントが1時間ロックされました。" %}
   </p>
 </div>
 {% endblock content %}
