--- a/static/css/users/style.scss
+++ b/static/css/users/style.scss
@@ -27,6 +27,14 @@ $red: #dd4546;
   color: $white;
   &:hover {
     background-color: $blue;
+    color: $white;
+  }
+}
+@mixin link {
+  cursor: pointer;
+  color: $light-blue;
+  &:hover {
+    color: $dark-blue;
   }
 }
 
@@ -89,6 +97,12 @@ html {
     @media screen and (max-width: 600px) {
       font-size: 0.7rem;
     }
+    .link {
+      @include link;
+    }
+    .btn {
+      @include button;
+    }
     section {
       background-color: $light-grey;
       .container {
@@ -97,9 +111,6 @@ html {
         border-color: $grey;
         .header {
           @include header;
-        }
-        .btn {
-          @include button;
         }
         .logout,
         .withdraw {
@@ -117,5 +128,10 @@ html {
 
 .message-success {
   background-color: $blue;
+  color: $white;
+}
+
+.message-failed {
+  background-color: $grey;
   color: $white;
 }
