--- a/users/templates/users/signup_doing.html
+++ b/users/templates/users/signup_doing.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="pt-4 pb-3">
-  <p>
+  <!-- <p>
     {% trans "2段階認証を実行します。" %}
   </p>
   <p>
@@ -13,11 +13,13 @@
   <p style="font-size: small;">
     {% trans "※ このページを閉じると<br>再度QRコードを表示出来ないためご注意ください。" %}
   </p>
-  <p><img src="data:image/png;base64,{{ request.session.img }}" alt="qrcode" width="100"></p>
-  <form action="{% url 'users:signup_done' %}" method="POST">{% csrf_token %}
+  <p><img src="data:image/png;base64,{{ request.session.img }}" alt="qrcode" width="100"></p> -->
+  <form action="{% url 'users:signup_done' %}" method="GET">
     <table class="w-100">
       {{ two_step_auth_form.as_table }}
     </table>
+    <!-- TODO: ワンタイムパスワードのQRコードを有効なものにする -->
+    <p>＊どんな数字でも構いません。</p>
     <button type="submit" class="btn w-100 mt-3">
       {% trans "送信" %}
     </button>
