--- a/static/css/app/style.css
+++ b/static/css/app/style.css
@@ -62,6 +62,28 @@ html body {
   }
 }
 
+html body .link {
+  cursor: pointer;
+  color: #8ebbcf;
+}
+
+html body .link:hover {
+  text-decoration: underline;
+  color: #023465;
+}
+
+html body .btn {
+  padding: 6px;
+  text-align: center;
+  background-color: #8ebbcf;
+  color: #ffffff;
+}
+
+html body .btn:hover {
+  background-color: #609bb6;
+  color: #ffffff;
+}
+
 html body section {
   background-color: #f8f8f8;
 }
@@ -78,17 +100,6 @@ html body section .container .header {
   color: #ffffff;
   padding: 10px;
   width: 100%;
-}
-
-html body section .container .btn {
-  padding: 6px;
-  text-align: center;
-  background-color: #8ebbcf;
-  color: #ffffff;
-}
-
-html body section .container .btn:hover {
-  background-color: #609bb6;
 }
 
 html body section .container p b {
