--- a/static/css/users/style.css
+++ b/static/css/users/style.css
@@ -62,6 +62,27 @@ html body {
   }
 }
 
+html body .link {
+  cursor: pointer;
+  color: #8ebbcf;
+}
+
+html body .link:hover {
+  color: #023465;
+}
+
+html body .btn {
+  padding: 6px;
+  text-align: center;
+  background-color: #8ebbcf;
+  color: #ffffff;
+}
+
+html body .btn:hover {
+  background-color: #609bb6;
+  color: #ffffff;
+}
+
 html body section {
   background-color: #f8f8f8;
 }
@@ -80,17 +101,6 @@ html body section .container .header {
   width: 100%;
 }
 
-html body section .container .btn {
-  padding: 6px;
-  text-align: center;
-  background-color: #8ebbcf;
-  color: #ffffff;
-}
-
-html body section .container .btn:hover {
-  background-color: #609bb6;
-}
-
 html body section .container .logout,
 html body section .container .withdraw {
   color: #8ebbcf;
@@ -105,6 +115,11 @@ html body section .container .withdraw:hover {
 
 .message-success {
   background-color: #609bb6;
+  color: #ffffff;
+}
+
+.message-failed {
+  background-color: #c3c2c2;
   color: #ffffff;
 }
 /*# sourceMappingURL=style.css.map */
