--- a/static/css/users/style.scss
+++ b/static/css/users/style.scss
@@ -131,7 +131,7 @@ html {
   color: $white;
 }
 
-.message-failed {
-  background-color: $grey;
+.message-warning {
+  background-color: $red;
   color: $white;
 }
