--- a/static/css/users/style.css
+++ b/static/css/users/style.css
@@ -118,8 +118,8 @@ html body section .container .withdraw:hover {
   color: #ffffff;
 }
 
-.message-failed {
-  background-color: #c3c2c2;
+.message-warning {
+  background-color: #dd4546;
   color: #ffffff;
 }
 /*# sourceMappingURL=style.css.map */
