--- a/users/templates/users/messages.html
+++ b/users/templates/users/messages.html
@@ -1,5 +1,5 @@
 {% load i18n %}
 {% load static %}
 {% for message in messages %}
-<p class="message-success text-center py-2">{{ message }}</p>
+  <p class="message-{{ message.tags }} text-center py-2">{{ message }}</p>
 {% endfor %}
