--- a/users/templates/users/signup_doing.html
+++ b/users/templates/users/signup_doing.html
@@ -19,7 +19,7 @@
       {{ two_step_auth_form.as_table }}
     </table>
     <!-- TODO: ワンタイムパスワードのQRコードを有効なものにする -->
-    <p>＊どんな数字でも構いません。</p>
+    <p>＊ワンタイムパスワードはただいま復旧作業中です。どんな数字でも構いません。</p>
     <button type="submit" class="btn w-100 mt-3">
       {% trans "送信" %}
     </button>
