--- a/templates/404.html
+++ b/templates/404.html
@@ -1,11 +1,10 @@
 {% extends 'users/base.html' %}
-{% load i18n %}
 {% load static %}
 
 {% block content %}
 <div class="pt-4 pb-3 text-center">
-  <p>
-    {% trans "500エラー" %}
-  </p>
+  <a href="#" onclick="history.back(); return false;">
+    <img src="{% static 'img/users/error_404.svg' %}" alt="404 Error">
+  </a>
 </div>
 {% endblock content %}
