--- a/templates/users/base.html
+++ b/templates/users/base.html
@@ -35,7 +35,7 @@
       {% endblock %}
 
       <div class="d-flex justify-content-between mt-3">
-        <p class="link" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">
+        <p class="link" data-toggle="modal" data-target="#help_center">
           {% trans "ヘルプセンター" %}
         </p>
         {% block language %}
@@ -45,8 +45,12 @@
     </div>
   </section>
 
-  {% block modal %}
-    {% include 'users/modal.html' %}
+  {% block request_house_owner %}
+    {% include 'users/request_house_owner.html' %}
+  {% endblock %}
+
+  {% block help_center %}
+    {% include 'users/help_center.html' %}
   {% endblock %}
 
   {% block bootstrap %}
