make admin page

--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -34,7 +34,7 @@
         {% trans "ログアウト" %}
       </p>
       {% if user.is_staff %}
-      <a href="/admin/" target="_blank" rel="noopener noreferrer">
+      <a href="{% url 'users:manage' %}" target="_blank" rel="noopener noreferrer">
         {% trans "ハウス管理" %}
       </a>
       {% else %}
