--- a/templates/users/add_housechore.html
+++ b/templates/users/add_housechore.html
@@ -1,33 +1,28 @@
 {% load i18n %}
 {% load static %}
 
-<div class="modal fade" id="help_center" tabindex="-1" role="dialog" aria-labelledby="help_center_ModalLabel" aria-hidden="true">
+<div class="modal fade" id="add_housechore" tabindex="-1" role="dialog" aria-labelledby="add_housechore_ModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="help_center_ModalLabel">
-          {% trans "ヘルプセンター" %}
+        <h5 class="modal-title" id="add_housechore_ModalLabel">
+          {% trans "家事を追加" %}
         </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <form action="{% url 'users:inquire' %}" method="GET">
+        <form action="{% url 'users:add_housechore' %}" method="POST">{% csrf_token %}
           <div class="form-group">
-            <label>Email:</label><br>
-            <input class="my-3" type="email" name="email" required>
-            <label for="message-text" class="col-form-label">
-              {% trans "お問い合わせ内容" %}
-            </label><br>
-            <textarea class="form-control" name="content" required></textarea>
+            {{ form.as_p }}
           </div>
           <div class="d-flex pt-2">
             <button type="button" class="btn w-50 mr-1" data-dismiss="modal">
               {% trans "キャンセル" %}
             </button>
             <button type="submit" class="btn w-50 ml-1">
-              {% trans "送信" %}
+              {% trans "追加" %}
             </button>
           </div>
         </form>
