--- a/templates/users/manage.html
+++ b/templates/users/manage.html
@@ -9,21 +9,58 @@
   </h5>
 </div>
 <div>
-  <table class="w-100 mx-auto my-5">
+  <p class="pt-5 mx-auto text-center">
+    {% trans "ハウスメイト" %}
+  </p>
+  <hr class="pb-2">
+  <table class="w-100 mx-auto">
     <tr>
       <th>email</th>
-      <th>家事</th>
-      <th>毎週</th>
-      <th>公益費</th>
+      <th class="text-center">
+        {% trans "家事" %}
+      </th>
+      <th class="text-center">
+      </th>
+      <th class="text-center">
+        {% trans "公益費" %}
+      </th>
     </tr>
     {% for housemate in housemates %}
     <tr>
-      <td><a href="#">{{ housemate.email }}</a></td>
-      <td>{{ housemate.housechore_title }}</td>
-      <td>{{ housemate.done_weekly }}</td>
-      <td>{{ housemate.done_monthly }}</td>
+      <td><a href="{% url 'users:housemate_detail' housemate.id %}">{{ housemate.email }}</a></td>
+      <td class="text-center">{{ housemate.housechore_title }}</td>
+      <td class="text-center">{{ housemate.done_weekly }}</td>
+      <td class="text-center">{{ housemate.done_monthly }}</td>
     </tr>
     {% endfor %}
   </table>
+  <hr class="mb-5">
+  <p class="pt-3 mx-auto text-center">
+    {% trans "家事" %}
+  </p>
+  <hr class="pb-2">
+  <table class="w-100 mx-auto">
+    <tr>
+      <th class="text-center">
+        {% trans "サマリ" %}
+      </th>
+      <th class="text-center">
+        {% trans "詳細" %}
+      </th>
+    </tr>
+    {% for housechore in housechores %}
+    <tr>
+      <td class="text-center"><a href="{% url 'users:housechore_detail' housechore.id %}">{{ housechore.title }}</a></td>
+      <td class="text-center">{{ housechore.description }}</td>
+    </tr>
+    {% endfor %}
+  </table>
+  <hr>
+  <button class="mb-5 btn w-100" data-toggle="modal" data-target="#add_housechore">
+    {% trans "家事を追加" %}
+  </button>
 </div>
+<a href="{% url 'users:index' %}">
+  {% trans "ユーザー画面に戻る" %}
+</a>
 {% endblock %}
