--- a/templates/users/manage.html
+++ b/templates/users/manage.html
@@ -13,45 +13,48 @@
     {% trans "ハウスメイト" %}
   </p>
   <hr class="pb-2">
-  <table class="w-100 mx-auto">
+  <table class="w-100 mx-auto manage_table">
     <tr>
       <th>email</th>
-      <th class="text-center">
+      <th>
         {% trans "家事" %}
       </th>
-      <th class="text-center">
+      <th>
       </th>
-      <th class="text-center">
+      <th>
         {% trans "公益費" %}
       </th>
     </tr>
     {% for housemate in housemates %}
     <tr>
-      <td><a href="{% url 'users:housemate_detail' housemate.id %}">{{ housemate.email }}</a></td>
-      <td class="text-center">{{ housemate.housechore_title }}</td>
-      <td class="text-center">{{ housemate.done_weekly }}</td>
-      <td class="text-center">{{ housemate.done_monthly }}</td>
+      <td class="text-left"><a href="{% url 'users:housemate_detail' housemate.id %}">{{ housemate.email }}</a></td>
+      <td>{{ housemate.housechore_title }}</td>
+      <td>{{ housemate.done_weekly }}</td>
+      <td>{{ housemate.done_monthly }}</td>
     </tr>
     {% endfor %}
   </table>
-  <hr class="mb-5">
+  <hr>
+  <button class="mb-5 btn w-100" data-toggle="modal" data-target="#deactivate_housemate">
+    {% trans "特定のハウスメイトをdeactivateする" %}
+  </button>
   <p class="pt-3 mx-auto text-center">
     {% trans "家事" %}
   </p>
   <hr class="pb-2">
-  <table class="w-100 mx-auto">
+  <table class="w-100 mx-auto manage_table">
     <tr>
-      <th class="text-center">
+      <th>
         {% trans "サマリ" %}
       </th>
-      <th class="text-center">
+      <th>
         {% trans "詳細" %}
       </th>
     </tr>
     {% for housechore in housechores %}
     <tr>
-      <td class="text-center"><a href="{% url 'users:housechore_detail' housechore.id %}">{{ housechore.title }}</a></td>
-      <td class="text-center">{{ housechore.description }}</td>
+      <td><a href="{% url 'users:housechore_detail' housechore.id %}">{{ housechore.title }}</a></td>
+      <td class="text-left">{{ housechore.description }}</td>
     </tr>
     {% endfor %}
   </table>
